# TimezoneBot

./: Cargo.toml
src/: digit_emotes.rs  event_handler.rs  main.rs
src/commands/: time.rs
