[package]
name = "TimezoneBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1.18.2", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
chrono = "0.4.19"
chrono-tz = "0.6.1"